--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -369,7 +369,7 @@
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
-		    <version>${nexus-staging-maven-plugin}</version>
+		    <version>${nexus-staging-maven-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>de.dentrassi.maven</groupId>
