--- a/sansa-query/sansa-query-spark/pom.xml
+++ b/sansa-query/sansa-query-spark/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-query-parent_2.12</artifactId>
-        <version>0.8.0-RC4-SNAPSHOT</version>
+        <version>0.8.7-SNAPSHOT</version>
     </parent>
 
     <properties>
