--- a/sansa-inference/sansa-inference-tests/pom.xml
+++ b/sansa-inference/sansa-inference-tests/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>sansa-inference-parent_2.12</artifactId>
     <groupId>net.sansa-stack</groupId>
-    <version>0.8.7-SNAPSHOT</version>
+    <version>0.8.7</version>
   </parent>
   <artifactId>sansa-inference-tests_2.12</artifactId>
   <name>Inference API - Tests</name>
