--- a/sansa-examples/sansa-examples-spark/pom.xml
+++ b/sansa-examples/sansa-examples-spark/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sansa-stack</groupId>
 		<artifactId>sansa-examples-parent_2.12</artifactId>
-		<version>0.8.7</version>
+		<version>0.8.8-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sansa-examples-spark_2.12</artifactId>
