--- a/sansa-inference/sansa-inference-spark/pom.xml
+++ b/sansa-inference/sansa-inference-spark/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-inference-parent_2.12</artifactId>
-        <version>0.8.7</version>
+        <version>0.8.8-SNAPSHOT</version>
     </parent>
     <artifactId>sansa-inference-spark_2.12</artifactId>
 
