--- a/sansa-resource-metadata/pom.xml
+++ b/sansa-resource-metadata/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-parent_2.12</artifactId>
-        <version>0.8.7</version>
+        <version>0.8.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>sansa-resource-metadata</artifactId>
