Reactivated dummy module for deployment

--- a/sansa-pkg-parent/pom.xml
+++ b/sansa-pkg-parent/pom.xml
@@ -21,7 +21,7 @@
 	
 	<!-- Dummy module that should come after all skipped modules -->
 	<!-- If the last module of a maven reactor is skipped then certain release actions may not run -->
-	<!-- <module>sansa-pkg-dummy</module> -->
+	<module>sansa-pkg-dummy</module>
     </modules>
 
 </project>
