--- a/sansa-pkg-parent/sansa-pkg-dummy/pom.xml
+++ b/sansa-pkg-parent/sansa-pkg-dummy/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-pkg-parent_2.12</artifactId>
-        <version>0.8.0-RC3-SNAPSHOT</version>
+        <version>0.8.7-SNAPSHOT</version>
     </parent>
 
     <artifactId>sansa-pkg-dummy_2.12</artifactId>
