Added code towards a spark-based RDB source resolver (e.g. for use with RML logical sources)

--- a/sansa-sabine/pom.xml
+++ b/sansa-sabine/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.aksw.rmltk</groupId>
+            <artifactId>r2rml-jena-sql-transforms</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.aksw.jenax</groupId>
             <artifactId>jenax-arq-plugins-bundle</artifactId>
         </dependency>
