--- a/sansa-sabine/pom.xml
+++ b/sansa-sabine/pom.xml
@@ -91,6 +91,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-models-d2rq</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>sansa-spark-jena-java${scala.version.suffix}</artifactId>
         </dependency>
