--- a/sansa-cmds-picocli/pom.xml
+++ b/sansa-cmds-picocli/pom.xml
@@ -77,6 +77,11 @@
         </dependency>
 
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>sansa-resource-metadata</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.aksw.commons</groupId>
             <artifactId>aksw-commons-utils</artifactId>
         </dependency>
