--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -112,7 +112,7 @@
         <ver.netty>4.1.74.Final</ver.netty>
         <ver.jackson>2.13.3</ver.jackson>
         <!-- <log4j.version>1</log4j.version> -->
-
+	<bsbm.version>3.1.8-SNAPSHOT</bsbm.version>
 
         <!-- Jetty is pulled in from at least sparqlify - the current dep declarations
             do not cover all mentioned jetty deps -->
@@ -126,7 +126,7 @@
         <owlapi.version>5.1.17</owlapi.version>
 
         <ontop.version>4.3.0-2</ontop.version>
-        <sparqlify.version>0.9.5-SNAPSHOT</sparqlify.version>
+        <sparqlify.version>0.9.6-SNAPSHOT</sparqlify.version>
 
         <guava.version>30.1-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
@@ -1853,7 +1853,7 @@
             <dependency>
                 <groupId>org.aksw.bsbm</groupId>
                 <artifactId>bsbm-core</artifactId>
-                <version>3.1.6</version>
+		<version>${bsbm.version}</version>
                 <scope>test</scope>
             </dependency>
 
