Fixed some hadoop dependencies in wrong versions

--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -1396,6 +1396,18 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client-api</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client-runtime</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
             <!-- SPARK -->
             <dependency>
                 <groupId>org.apache.spark</groupId>
