--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -1408,6 +1408,12 @@
                 <version>${hadoop.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-hdfs-client</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+
             <!-- SPARK -->
             <dependency>
                 <groupId>org.apache.spark</groupId>
