--- a/sansa-ml/pom.xml
+++ b/sansa-ml/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>net.sansa-stack</groupId>
 		<artifactId>sansa-parent_2.12</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
+		<version>0.9.0</version>
 	</parent>
 
 	<packaging>pom</packaging>
