--- a/sansa-rdf/sansa-rdf-spark/pom.xml
+++ b/sansa-rdf/sansa-rdf-spark/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-rdf-parent_2.12</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <dependencies>
