--- a/sansa-stack/sansa-stack-spark/pom.xml
+++ b/sansa-stack/sansa-stack-spark/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-stack_2.12</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <artifactId>sansa-stack-spark_2.12</artifactId>
