--- a/sansa-inference/sansa-inference-common/pom.xml
+++ b/sansa-inference/sansa-inference-common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>sansa-inference-parent_2.12</artifactId>
     <groupId>net.sansa-stack</groupId>
-    <version>0.9.0</version>
+    <version>0.9.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
