--- a/sansa-inference/sansa-inference-common/pom.xml
+++ b/sansa-inference/sansa-inference-common/pom.xml
@@ -27,12 +27,10 @@
       <groupId>org.apache.jena</groupId>
       <artifactId>jena-arq</artifactId>
     </dependency>
-    <!--
     <dependency>
       <groupId>org.apache.jena</groupId>
-      <artifactId>jena-tdb</artifactId>
+      <artifactId>jena-tdb1</artifactId>
     </dependency>
-    -->
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>jena-cmds</artifactId>
