Optimized imports across the project

--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -586,7 +586,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.3.0</version>
                 </plugin>
 
 
@@ -756,6 +756,12 @@
             <dependency>
                 <groupId>net.sansa-stack</groupId>
                 <artifactId>sansa-spark-jena-java${scala.version.suffix}</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.sansa-stack</groupId>
+                <artifactId>sansa-spark-jena-scala${scala.version.suffix}</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
