--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
 
     <modules>
         <module>sansa-hadoop-jena</module>
-        <module>sansa-spark-jena-java</module>
+	    <module>sansa-spark-jena-java</module>
+	    <module>sansa-spark-jena-scala</module>
 
         <module>sansa-test-resources</module>
         <module>sansa-resource-metadata</module>
@@ -82,9 +83,9 @@
         <module>sansa-spark-cli</module>
         <module>sansa-bench-spark</module>
         <module>sansa-pkg-parent</module>
-	<module>sansa-stack</module>
+        <module>sansa-stack</module>
 
-	<module>sansa-spark-jakarta</module>
+	    <module>sansa-spark-jakarta</module>
     </modules>
 
     <dependencies>
