--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -72,7 +72,7 @@
     <properties>
         <maven.version>3.1</maven.version>
 
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
 
 
         <!--
@@ -88,6 +88,7 @@
 
         <flink.version>1.11.2</flink.version>
         <spark.version>3.5.0</spark.version>
+        <derby.version>10.15.2.0</derby.version>
         <!-- Spark Testing isn't always in sync, so we have to check for latest version and adapt here -->
         <spark.testing.version>3.0.1_1.0.0</spark.testing.version>
 
@@ -1560,9 +1561,15 @@
                         <groupId>org.eclipse.jetty</groupId>
                         <artifactId>jetty-util</artifactId>
                     </exclusion>
-
                 </exclusions>
             </dependency>
+
+		    <!-- Newer Derby is drawn in by jena-geosparql but an older version comes from org.apache.spark:spark-hive_2.12-->
+                    <dependency>
+                        <groupId>org.apache.derby</groupId>
+                        <artifactId>derby</artifactId>
+                        <version>${derby.version}</version>
+                    </dependency>
 
             <!-- Spark-Bench -->
             <dependency>
