--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -87,7 +87,7 @@
         <scala.version.suffix>_${scala.binary.version}</scala.version.suffix>
 
         <flink.version>1.11.2</flink.version>
-        <spark.version>3.5.0</spark.version>
+        <spark.version>3.5.1</spark.version>
         <derby.version>10.15.2.0</derby.version>
         <!-- Spark Testing isn't always in sync, so we have to check for latest version and adapt here -->
         <spark.testing.version>3.0.1_1.0.0</spark.testing.version>
@@ -103,16 +103,16 @@
         <!-- <log4j.version>2.21.0</log4j.version> -->
 
         <!-- Our util projects (mainly maintained by Claus) -->
-        <aksw.commons.version>0.9.8-SNAPSHOT</aksw.commons.version>
-        <jena.version>5.0.0-SNAPSHOT</jena.version>
-        <jenax.version>5.0.0-1-SNAPSHOT</jenax.version>
-        <rmltk.version>5.0.0-1-SNAPSHOT</rmltk.version>
+        <aksw.commons.version>0.9.8</aksw.commons.version>
+        <jena.version>5.0.0</jena.version>
+        <jenax.version>5.0.0-1</jenax.version>
+        <rmltk.version>5.0.0-1</rmltk.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
 
         <ver.netty>4.1.74.Final</ver.netty>
         <ver.jackson>2.13.3</ver.jackson>
-	    <bsbm.version>3.1.10-SNAPSHOT</bsbm.version>
+        <bsbm.version>3.1.10</bsbm.version>
 
         <!-- Jetty is pulled in from at least sparqlify - the current dep declarations
             do not cover all mentioned jetty deps -->
